# python_package_template

./: .gitignore  README.md  setup.cfg
src/python_package_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
