[metadata]
name = python_package_template
version = 0.0.1
author = takecloud-dev
author_email = informatique@takecloud.fr
description = Python Project Template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/takecloud-dev/python_package_template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
[options]
package_dir =
    = src
packages = find:
install_requires =
    some_other_package
python_requires = >=3.9

[options.packages.find]
where = src
